fix: Fix popover horizontal alignment on tags.

--- a/src/components/popover/popover.css
+++ b/src/components/popover/popover.css
@@ -1,5 +1,6 @@
 .popover-anchor {
   display: inline-flex;
+  align-self: flex-start;
 }
 
 .popover {
